[package]
name = "resent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.64"
chrono = "0.4.44"
resent-macros = { path = "./macros" }
sea-query = { version = "1.0.0-rc.31", features = ["with-uuid", "with-chrono"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono"] }
sea-query-sqlx = { version = "0.8.0-rc.14", features = [
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
] }
thiserror = "2.0.18"

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "uuid",
    "chrono",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.28.2", features = ["full"] }


[workspace]
resolver = "3"
members = ["macros"]

[workspace.package]
edition = "2024"
