[package]
name = "resent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.64"
time = "0.3.47"
futures-util = "0.3.32"
resent-macros = { path = "./macros" }
sea-query = { version = "1.0.0-rc.31", features = [
    "with-uuid",
    "with-time",
    "with-json",
] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "time", "json"] }
sea-query-sqlx = { version = "0.8.0-rc.14", features = [
    "sqlx-postgres",
    "with-uuid",
    "with-time",
    "with-json",
] }
thiserror = "2.0.18"


[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "uuid",
    "time",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.28.2", features = ["full"] }


[workspace]
resolver = "3"
members = ["macros"]

[workspace.package]
edition = "2024"
